--- a/apps/musicloud/kustomization.yaml
+++ b/apps/musicloud/kustomization.yaml
@@ -14,3 +14,4 @@ images:
 resources:
   - musicloud-postgres-deployment.yaml
   - musicloud-postgres-configmap.yaml
+  - musicloud-postgres-pvc.yaml
