--- a/apps/musicloud/kustomization.yaml
+++ b/apps/musicloud/kustomization.yaml
@@ -9,7 +9,7 @@ commonLabels:
 images:
   - name: postgres
     newName: postgres
-    newTag: 9.5
+    newTag: "9.5"
 
 resources:
   - musicloud-postgres-deployment.yaml
