--- a/apps/musicloud/musicloud-postgres-deployment.yaml
+++ b/apps/musicloud/musicloud-postgres-deployment.yaml
@@ -18,7 +18,7 @@ spec:
             claimName: musicloud-postgres-claim
       containers:
         - name: postgres
-          image: library/postgres
+          image: postgres
           env:
             - name: POSTGRES_USER
               valueFrom:
