--- a/apps/musicloud/musicloud-migration-job.yaml
+++ b/apps/musicloud/musicloud-migration-job.yaml
@@ -14,7 +14,7 @@ spec:
             - name: POSTGRES_DB
               value: musicloud
             - name: POSTGRES_HOST
-              value: musicloud-postgres
+              value: musicloud-postgres-service
             - name: POSTGRES_USER
               valueFrom:
                 configMapKeyRef:
@@ -25,3 +25,4 @@ spec:
                 configMapKeyRef:
                   name: musicloud-postgres-configmap
                   key: password
+      restartPolicy: OnFailure
