chore: rename migration job

--- a/apps/musicloud/kustomization.yaml
+++ b/apps/musicloud/kustomization.yaml
@@ -16,4 +16,4 @@ resources:
   - musicloud-postgres-configmap.yaml
   - musicloud-postgres-pvc.yaml
   - musicloud-postgres-service.yaml
-  - musicloud-migration-job.yaml
+  - musicloud-postgres-migration-job.yaml
