--- a/apps/musicloud/musicloud-postgres-migration-job.yaml
+++ b/apps/musicloud/musicloud-postgres-migration-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: musicloud-migration-job
+  name: musicloud-postgres-migration-job
 spec:
   completions: 1
   parallelism: 1
