--- a/bootstrap/apps/musicloud.yaml
+++ b/bootstrap/apps/musicloud.yaml
@@ -5,6 +5,7 @@ metadata:
   name: api-prod-eu-west-1
   namespace: argocd
 spec:
+  project: default
   source:
     repoURL: 'https://github.com/pldin601/homefs-k8s.git'
     path: apps/musicloud
