--- a/bootstrap/apps/musicloud.yaml
+++ b/bootstrap/apps/musicloud.yaml
@@ -2,8 +2,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: api-prod-eu-west-1
-  namespace: argocd
+  name: musicloud
+  namespace: musicloud
 spec:
   project: default
   source:
