fix: rename app manifest

--- a/bootstrap/apps/musicloud.yaml
+++ b/bootstrap/apps/musicloud.yaml
@@ -2,10 +2,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: musicloud
+  name: musicloud-app
   namespace: musicloud
 spec:
-  project: ""
+  project: default
   source:
     repoURL: 'https://github.com/pldin601/homefs-k8s.git'
     path: apps/musicloud
