--- a/bootstrap/persistentvolumes.yaml
+++ b/bootstrap/persistentvolumes.yaml
@@ -7,6 +7,6 @@ spec:
   capacity:
     storage: 100Gi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   hostPath:
     path: "/volumes/k8s"
