--- a/bootstrap/apps/musicloud.yaml
+++ b/bootstrap/apps/musicloud.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: musicloud
   namespace: argocd
+  finalizers:
+      - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
