feat(musicloud): add php-fpm deployment

--- a/apps/musicloud/kustomization.yaml
+++ b/apps/musicloud/kustomization.yaml
@@ -17,3 +17,5 @@ resources:
   - musicloud-postgres-pvc.yaml
   - musicloud-postgres-service.yaml
   - musicloud-postgres-migration-job.yaml
+  - musicloud-server-deployment.yaml
+  - musicloud-server-pvc.yaml
