--- a/apps/musicloud/musicloud-server-pvc.yaml
+++ b/apps/musicloud/musicloud-server-pvc.yaml
@@ -3,9 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: musicloud-server-data-volume-claim
 spec:
-  storageClassName: manual
+  storageClassName: local-path
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 32Gi
