--- a/apps/musicloud/kustomization.yaml
+++ b/apps/musicloud/kustomization.yaml
@@ -12,6 +12,7 @@ images:
     newTag: "9.5"
 
 resources:
+  - musicloud-ns.yaml
   - musicloud-postgres-deployment.yaml
   - musicloud-postgres-configmap.yaml
   - musicloud-postgres-pvc.yaml
