--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -4,5 +4,5 @@ metadata:
   name: arbitrary
 
 resources:
+  - resources/local-path-provisioner.yaml
   - apps/musicloud.yaml
-  - persistentvolumes.yaml
