--- a/bootstrap/resources/local-path-provisioner.yaml
+++ b/bootstrap/resources/local-path-provisioner.yaml
@@ -2,19 +2,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: musicloud
+  name: local-path-provisioner
   namespace: argocd
   finalizers:
-      - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/pldin601/homefs-k8s.git'
-    path: apps/musicloud
+    repoURL: 'https://github.com/rancher/local-path-provisioner.git'
+    path: deploy/chart
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: musicloud
+    namespace: default
   syncPolicy:
     automated:
       prune: true
