feat(musicloud): set ports/containerPort to 8080

--- a/apps/musicloud/musicloud-server-deployment.yaml
+++ b/apps/musicloud/musicloud-server-deployment.yaml
@@ -48,3 +48,5 @@ spec:
               name: musicloud-server-temp-volume
         - name: nginx
           image: pldin601/musicloud-nginx:latest
+          ports:
+            - containerPort: 8080
