--- a/apps/musicloud/musicloud-server-service.yaml
+++ b/apps/musicloud/musicloud-server-service.yaml
@@ -7,7 +7,4 @@ spec:
   selector:
     deployment: musicloud-server-deployment
   ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 8080
-      nodePort: 10080
+    - port: 8080
