--- a/bootstrap/apps/traefik.yaml
+++ b/bootstrap/apps/traefik.yaml
@@ -17,7 +17,7 @@ spec:
         - name: hostNetwork
           value: "true"
         - name: providers.kubernetesIngress.enabled
-        - value: false
+        - value: "false"
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
