feat(traefik): add ingress route

--- a/apps/musicloud/kustomization.yaml
+++ b/apps/musicloud/kustomization.yaml
@@ -21,3 +21,4 @@ resources:
   - musicloud-server-deployment.yaml
   - musicloud-server-pvc.yaml
   - musicloud-server-service.yaml
+  - musicloud-ignressroute.yaml
