--- a/apps/musicloud/musicloud-server-service.yaml
+++ b/apps/musicloud/musicloud-server-service.yaml
@@ -3,8 +3,9 @@ apiVersion: v1
 metadata:
   name: musicloud-server-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     deployment: musicloud-server-deployment
   ports:
-    - port: 8080
+    - name: http
+      port: 8080
