feat(traefik): use right ports and disable exposing

--- a/bootstrap/apps/traefik.yaml
+++ b/bootstrap/apps/traefik.yaml
@@ -20,6 +20,14 @@ spec:
           value: 'true'
         - name: deployment.kind
           value: DaemonSet
+        - name: ports.web.port
+          value: "80"
+        - name: ports.web.expose
+          value: "false"
+        - name: ports.websecure.port
+          value: "443"
+        - name: ports.websecure.expose
+          value: "false"
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
