chore: rename argocd-server-ingressroute.yaml

--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - resources/local-path-provisioner.yaml
   - apps/musicloud.yaml
   - apps/traefik.yaml
-  - argocd/ingressroute.yaml
+  - argocd/argocd-server-ingressroute.yaml
