chore: create tls in spec

--- a/bootstrap/argocd/argocd-server-ingressroute.yaml
+++ b/bootstrap/argocd/argocd-server-ingressroute.yaml
@@ -10,8 +10,11 @@ spec:
   routes:
     - kind: Rule
       match: Host(`argocd.homefs.biz`)
-      tls: true
       priority: 10
       services:
         - name: argocd-server
           port: 443
+  tls:
+    certResolver: default
+    options:
+      name: opt
