fix: comment additional arguments

--- a/bootstrap/apps/traefik.yaml
+++ b/bootstrap/apps/traefik.yaml
@@ -26,8 +26,8 @@ spec:
           value: "false"
         - name: persistence.enabled
           value: "true"
-        - name: additionalArguments
-          value: "{--certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com,--certificatesResolvers.default.acme.storage=/certs/acme.json,--certificatesResolvers.default.acme.httpChallenge.entryPoint=web}"
+#        - name: additionalArguments
+#          value: "{--certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com,--certificatesResolvers.default.acme.storage=/certs/acme.json,--certificatesResolvers.default.acme.httpChallenge.entryPoint=web}"
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
