--- a/bootstrap/apps/traefik.yaml
+++ b/bootstrap/apps/traefik.yaml
@@ -26,8 +26,12 @@ spec:
           value: "false"
         - name: persistence.enabled
           value: "true"
-#        - name: additionalArguments
-#          value: "{--certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com,--certificatesResolvers.default.acme.storage=/certs/acme.json,--certificatesResolvers.default.acme.httpChallenge.entryPoint=web}"
+        - name: additionalArguments[0]
+          value: --certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com
+        - name: additionalArguments[1]
+          value: --certificatesResolvers.default.acme.storage=/certs/acme.json
+        - name: additionalArguments[2]
+          value: --certificatesResolvers.default.acme.httpChallenge.entryPoint=web
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
