--- a/bootstrap/apps/nginx-lb.yaml
+++ b/bootstrap/apps/nginx-lb.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: traefik
+  name: nginx-lb
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -12,8 +12,6 @@ spec:
     repoURL: 'https://github.com/pldin601/homefs-k8s.git'
     path: apps/nginx-lb
     targetRevision: HEAD
-    helm:
-      parameters:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
