--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -1,7 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: arbitrary
+  name: bootstrap
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 
 resources:
   - resources/local-path-provisioner.yaml
