--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -1,10 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  name: bootstrap
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
+  name: arbitrary
 
 resources:
   - resources/local-path-provisioner.yaml
