--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - resources/local-path-provisioner.yaml
   - apps/musicloud.yaml
   - apps/traefik.yaml
-  - apps/nginx-lb.yaml
+#  - apps/nginx-lb.yaml
   - argocd/argocd-server-ingressroute.yaml
