set `MYSQL_RANDOM_ROOT_PASSWORD` to `true`

--- a/apps/myownradio/myownradio-mysql-deployment.yaml
+++ b/apps/myownradio/myownradio-mysql-deployment.yaml
@@ -36,6 +36,7 @@ spec:
                   name: myownradio-mysql-configmap
                   key: database
             - name: MYSQL_RANDOM_ROOT_PASSWORD
+              value: "true"
           volumeMounts:
             - mountPath: "/var/lib/mysql"
               name: myownradio-mysql-data-volume
