--- a/apps/myownradio/kustomization.yaml
+++ b/apps/myownradio/kustomization.yaml
@@ -15,3 +15,4 @@ resources:
   - myownradio-mysql-pvc.yaml
   - myownradio-mysql-service.yaml
   - myownradio-external-service.yaml
+  - myownradio-server-deployment.yaml
