--- a/bootstrap/apps/traefik.yaml
+++ b/bootstrap/apps/traefik.yaml
@@ -23,11 +23,13 @@ spec:
         - name: ports.websecure.hostPort
           value: "8443"
         - name: additionalArguments[0]
-          value: --certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com
+          value: --certificatesResolvers.default.acme.httpChallenge.true
         - name: additionalArguments[1]
-          value: --certificatesResolvers.default.acme.storage=/certs/acme.json
-        - name: additionalArguments[2]
           value: --certificatesResolvers.default.acme.httpChallenge.entryPoint=web
+        - name: additionalArguments[2]
+          value: --certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com
+        - name: additionalArguments[3]
+          value: --certificatesResolvers.default.acme.storage=/certs/acme.json
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
