--- a/bootstrap/apps/traefik.yaml
+++ b/bootstrap/apps/traefik.yaml
@@ -33,7 +33,7 @@ spec:
         - name: additionalArguments[1]
           value: --certificatesResolvers.default.acme.email=roman.lakhtadyr+certs@gmail.com
         - name: additionalArguments[2]
-          value: --certificatesResolvers.default.acme.storage=/certs/acme.json
+          value: --certificatesResolvers.default.acme.storage=/data/acme.json
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
