--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -5,8 +5,10 @@ metadata:
   name: myownradio-external
 spec:
   ports:
-    - port: 80
-    - port: 443
+    - name: http
+      port: 80
+    - name: https
+      port: 443
   externalIPs:
     - 192.168.1.150
 ---
