set scheme to https

--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -28,5 +28,6 @@ spec:
         - kind: Service
           name: myownradio-external
           port: 443
+          scheme: https
   tls:
     certResolver: default
