disable 80 port on myownradio-external

--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -5,8 +5,8 @@ metadata:
   name: myownradio-external
 spec:
   ports:
-    - name: http
-      port: 80
+#    - name: http
+#      port: 80
     - name: https
       port: 443
   externalIPs:
@@ -27,7 +27,7 @@ spec:
       services:
         - kind: Service
           name: myownradio-external
-          port: 80
-          scheme: http
+          port: 443
+          scheme: https
   tls:
     certResolver: default
