--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -7,8 +7,16 @@ spec:
   ports:
     - name: https
       port: 443
-  type: ExternalName
-  externalName: 192.168.1.200
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: myownradio-external
+subsets:
+  - addresses:
+      - ip: 192.168.1.200
+    ports:
+      - port: 443
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
