--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -2,12 +2,26 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: myownradio-external
+  name: myownradio-external-service
 subsets:
   - addresses:
       - ip: 192.168.1.200
     ports:
-      - port: 443
+      - name: https
+        port: 443
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myownradio-external-service
+spec:
+  ports:
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 443
+      nodePort: 0
+  selector: {}
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
@@ -22,8 +36,8 @@ spec:
     - kind: Rule
       match: Host(`myownradio.biz`)
       services:
-        - kind: Endpoints
-          name: myownradio-external
+        - kind: Service
+          name: myownradio-external-service
           port: https
           scheme: https
   tls:
