--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -7,8 +7,8 @@ subsets:
   - addresses:
       - ip: 192.168.1.200
     ports:
-      - name: https
-        port: 443
+      - name: http
+        port: 80
 ---
 apiVersion: v1
 kind: Service
@@ -16,10 +16,10 @@ metadata:
   name: myownradio-external-service
 spec:
   ports:
-    - name: https
-      port: 443
+    - name: http
+      port: 80
       protocol: TCP
-      targetPort: 443
+      targetPort: 80
       nodePort: 0
   selector: {}
 ---
@@ -38,7 +38,7 @@ spec:
       services:
         - kind: Service
           name: myownradio-external-service
-          port: https
-          scheme: https
+          port: http
+          scheme: http
   tls:
     certResolver: default
