--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -9,6 +9,8 @@ subsets:
     ports:
       - name: http
         port: 80
+      - name: https
+        port: 443
 ---
 apiVersion: v1
 kind: Service
@@ -20,6 +22,11 @@ spec:
       port: 80
       protocol: TCP
       targetPort: 80
+      nodePort: 0
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: 443
       nodePort: 0
   selector: {}
 ---
@@ -38,7 +45,7 @@ spec:
       services:
         - kind: Service
           name: myownradio-external-service
-          port: http
-          scheme: http
+          port: https
+          scheme: https
   tls:
     certResolver: default
