--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -7,8 +7,8 @@ subsets:
   - addresses:
       - ip: 192.168.1.200
     ports:
-      - name: http
-        port: 80
+#      - name: http
+#        port: 80
       - name: https
         port: 443
 ---
