--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 
   # Resources
   - resources/local-path-provisioner.yaml
+  - resources/docker-swarm-service.yaml
   - apps/traefik.yaml
 #  - apps/nginx-lb.yaml
   - argocd/argocd-server-ingressroute.yaml
