deploy grafana proxy

--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   # Apps
   - apps/musicloud.yaml
   - apps/myownradio.yaml
+  - apps/grafana.yaml
 
   # Resources
   - resources/local-path-provisioner.yaml
