--- a/apps/myownradio/kustomization.yaml
+++ b/apps/myownradio/kustomization.yaml
@@ -17,3 +17,4 @@ resources:
   - myownradio-external-service.yaml
   - myownradio-server-deployment.yaml
   - myownradio-server-pvc.yaml
+  - myownradio-server-service.yaml
