fix the amount of dashes

--- a/apps/myownradio/myownradio-server-service.yaml
+++ b/apps/myownradio/myownradio-server-service.yaml
@@ -1,4 +1,4 @@
---
+---
 kind: Service
 apiVersion: v1
 metadata:
@@ -7,6 +7,7 @@ spec:
   selector:
     deployment: myownradio-server-deployment
   ports:
-    - protocol: TCP
-      port: 8080
-      targetPort: 80
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: http
