--- a/apps/myownradio/kustomization.yaml
+++ b/apps/myownradio/kustomization.yaml
@@ -18,3 +18,4 @@ resources:
   - myownradio-server-deployment.yaml
   - myownradio-server-pvc.yaml
   - myownradio-server-service.yaml
+  - myownradio-streamer-deployment.yaml
