use docker-swarm-service

--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -44,8 +44,9 @@ spec:
       match: Host(`myownradio.biz`) || Host(`fs1.myownradio.biz`) || Host(`dev.myownradio.biz`)
       services:
         - kind: Service
-          name: myownradio-external-service
+          name: docker-swarm-service
           port: https
           scheme: https
+          namespace: default
   tls:
     certResolver: default
