Revert "use docker-swarm-service"
This reverts commit 90134dbe7c7b2b42192c2ffe5884cd209f3bcd66.

--- a/apps/myownradio/myownradio-external-service.yaml
+++ b/apps/myownradio/myownradio-external-service.yaml
@@ -44,9 +44,8 @@ spec:
       match: Host(`myownradio.biz`) || Host(`fs1.myownradio.biz`) || Host(`dev.myownradio.biz`)
       services:
         - kind: Service
-          name: docker-swarm-service
+          name: myownradio-external-service
           port: https
           scheme: https
-          namespace: default
   tls:
     certResolver: default
