--- a/apps/grafana/grafana-external-service.yaml
+++ b/apps/grafana/grafana-external-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: grafana
+  name: grafana-external
   namespace: default
 spec:
   entryPoints:
