--- a/apps/myownradio/kustomization.yaml
+++ b/apps/myownradio/kustomization.yaml
@@ -19,3 +19,5 @@ resources:
   - myownradio-server-pvc.yaml
   - myownradio-server-service.yaml
   - myownradio-streamer-deployment.yaml
+  - myownradio-streamer-service.yaml
+  - myownradio-streamer-servicemonitor.yaml
