--- a/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -9,6 +9,10 @@ spec:
       deployment: myownradio-streamer
   template:
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8080"
       labels:
         deployment: myownradio-streamer
     spec:
