--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -7,12 +7,14 @@ resources:
   # Apps
   - apps/musicloud.yaml
   - apps/myownradio.yaml
-  - apps/grafana.yaml
-  - apps/prometheus.yaml
 
   # Resources
   - resources/local-path-provisioner.yaml
   - resources/docker-swarm-service.yaml
+  - resources/sealed-secrets.yaml
+
+  # Infrastructure Apps
+  - apps/grafana.yaml
+  - apps/prometheus.yaml
   - apps/traefik.yaml
-#  - apps/nginx-lb.yaml
   - argocd/argocd-server-ingressroute.yaml
