--- a/apps/myownradio/kustomization.yaml
+++ b/apps/myownradio/kustomization.yaml
@@ -20,3 +20,4 @@ resources:
   - myownradio-server-service.yaml
   - myownradio-streamer-deployment.yaml
   - myownradio-streamer-service.yaml
+  - myownradio-dockerconfig-secret.yaml
