--- a/apps/myownradio/myownradio-server-deployment.yaml
+++ b/apps/myownradio/myownradio-server-deployment.yaml
@@ -50,4 +50,4 @@ spec:
           ports:
             - containerPort: 80
       imagePullSecrets:
-        - name: regcred
+        - name: dockerconfig
