add commandArgs[0] = --update-status

--- a/bootstrap/resources/sealed-secrets.yaml
+++ b/bootstrap/resources/sealed-secrets.yaml
@@ -12,6 +12,10 @@ spec:
     repoURL: 'https://github.com/bitnami-labs/sealed-secrets.git'
     path: helm/sealed-secrets
     targetRevision: HEAD
+    helm:
+      parameters:
+        - name: commandArgs[0]
+          value: --update-status
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: kube-system
