--- a/bootstrap/resources/sealed-secrets.yaml
+++ b/bootstrap/resources/sealed-secrets.yaml
@@ -14,6 +14,7 @@ spec:
     targetRevision: HEAD
     helm:
       parameters:
+        # Fixes issue https://github.com/argoproj/argo-cd/issues/5991
         - name: commandArgs[0]
           value: --update-status
   destination:
