--- a/bootstrap/kustomization.yaml
+++ b/bootstrap/kustomization.yaml
@@ -17,4 +17,5 @@ resources:
   - apps/grafana.yaml
   - apps/prometheus.yaml
   - apps/traefik.yaml
+  - apps/nginx-lb.yaml
   - argocd/argocd-server-ingressroute.yaml
